predicted terminal exons are trimmed to avoid artifacts due to overhangs into introns
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/SGSeq@96038 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,7 +30,6 @@ export(
  convertToSGFeatures,
  convertToTxFeatures,
  exportFeatures,
- filterTerminalExons,
  findTxVariants,
  getBamInfo,
  getSGFeatureCounts,
@@ -39,7 +38,8 @@ export(
  plotFeatures,
  plotSpliceGraph,
  plotVariants,
- predictTxFeatures
+ predictTxFeatures,
+ processTerminalExons
 )
 
 ## EXPORT CONSTRUCTORS
