--- a/NAMESPACE
+++ b/NAMESPACE
@@ -34,6 +34,7 @@ export(
  getBamInfo,
  getSGFeatureCounts,
  getTxVariantCounts,
+ makeVariantNames,
  mergeTxFeatures,
  plotFeatures,
  plotSpliceGraph,
