added argument counts_only for function getSGFeatureCounts; export makeSGFeatureCounts; allow sample_info to be a data.frame or DataFrame
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/SGSeq@97069 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -34,6 +34,7 @@ export(
  getBamInfo,
  getSGFeatureCounts,
  getTxVariantCounts,
+ makeSGFeatureCounts,
  makeVariantNames,
  mergeTxFeatures,
  plotFeatures,
