Introduced arguments verbose and max_complexity (skipping problematic regions); implemented workaround for scanBam bug; when predicting junctions, only obtain splice site counts if psi > 0 or retain_coverage = TRUE
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/SGSeq@99545 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,7 +18,7 @@ importFrom(igraph, clusters, degree, edge.connectivity, get.data.frame,
 importFrom(GenomicFeatures, exonsBy)
 importFrom(GenomeInfoDb, seqinfo, seqlengths, seqlevels)
 importFrom(parallel, mclapply)
-importFrom(Rsamtools, BamFile, scanBam, ScanBamParam)
+importFrom(Rsamtools, BamFile, scanBam, ScanBamParam, 'bamWhat<-')
 importFrom(rtracklayer, export)
 
 ## EXPORT FUNCTIONS
