--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,7 +15,7 @@ importFrom(Biostrings, DNAString, DNAStringSet, getSeq, translate)
 importFrom(igraph, clusters, degree, edge.connectivity, get.data.frame,
  get.shortest.paths, graph.data.frame, induced.subgraph, neighborhood,
  plot.igraph, shortest.paths, subcomponent)
-importFrom(GenomicFeatures, exonsBy)
+importFrom(GenomicFeatures, exonsBy, mapToTranscripts)
 importFrom(GenomeInfoDb, seqinfo, seqlengths, seqlevels)
 importFrom(parallel, mclapply)
 importFrom(Rsamtools, BamFile, scanBam, ScanBamParam, 'bamWhat<-')
