changed classes TxVariants, TxVariantCounts to SGVariants, SGVariantCounts
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/SGSeq@101122 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,10 +30,10 @@ export(
  convertToSGFeatures,
  convertToTxFeatures,
  exportFeatures,
- findTxVariants,
+ findSGVariants,
  getBamInfo,
  getSGFeatureCounts,
- getTxVariantCounts,
+ getSGVariantCounts,
  makeSGFeatureCounts,
  makeVariantNames,
  mergeTxFeatures,
@@ -49,9 +49,9 @@ export(
 export(
  TxFeatures,
  SGFeatures,
- TxVariants,
+ SGVariants,
  SGFeatureCounts,
- TxVariantCounts
+ SGVariantCounts
 )
 
 ## EXPORT ACCESSORS
