changes to plotting functions
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/SGSeq@101720 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,10 @@ importFrom(parallel, mclapply)
 importFrom(Rsamtools, BamFile, scanBam, ScanBamParam, 'bamWhat<-')
 importFrom(rtracklayer, export)
 
+## IMPORT CLASSES
+
+importClassesFrom(rtracklayer, GenomicRangesORGenomicRangesList)
+
 ## EXPORT FUNCTIONS
 
 export(
