allow obtaining SGVariantCounts from BAM files; changed default BPPARAM to SerialParam()
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/SGSeq@101994 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -82,9 +82,11 @@ exportMethods(
  counts,
  FPKM,
  countsVariant5p,
- countsVariant3p,
  countsTotal5p,
+ countsVariant3p,
  countsTotal3p,
+ countsVariant,
+ countsTotal,
  variantFreq
 )
 
@@ -110,8 +112,10 @@ exportMethods(
  'counts<-',
  'FPKM<-',
  'countsVariant5p<-',
- 'countsVariant3p<-',
  'countsTotal5p<-',
+ 'countsVariant3p<-',
  'countsTotal3p<-',
+ 'countsVariant<-',
+ 'countsTotal<-',
  'variantFreq<-'
 )
