--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,7 +1,6 @@
 ## IMPORT NAMESPACES
 
 import(BiocGenerics)
-import(BiocParallel)
 import(IRanges)
 import(GenomicAlignments)
 import(GenomicRanges)
@@ -18,7 +17,7 @@ importFrom(igraph, clusters, degree, edge.connectivity, get.data.frame,
  plot.igraph, shortest.paths, subcomponent)
 importFrom(GenomicFeatures, exonsBy, mapToTranscripts)
 importFrom(GenomeInfoDb, seqinfo, seqlengths, seqlevels)
-importFrom(parallel, mclapply)
+importFrom(parallel, mclapply, mcmapply)
 importFrom(rtracklayer, export)
 
 ## IMPORT CLASSES
