updated documentation and vignette
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/SGSeq@102500 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,17 +1,14 @@
 Package: SGSeq
 Type: Package
-Title: Prediction, quantification and visualization of splice events
-       from RNA-seq data
-Version: 1.1.28
+Title: Splice event detection and quantification from RNA-seq data
+Version: 1.1.29
 Author: Leonard Goldstein
 Maintainer: Leonard Goldstein <goldstel@gene.com>
-Description: Prediction of splice junctions, exons from BAM files. 
-	     Quantification of splice junctions, exons based on 
-	     compatible reads (counts, FPKMs). Identification of
-	     splice events from implied splice graph. Quantification
-	     of splice variants based on compatible reads spanning
- 	     event boundaries (counts, psi-values). Functions for
-	     annotation and visualization.
+Description: Predict splice junctions and exons from BAM files. Obtain 
+	     compatible read counts/FPKMs for splice junctions and disjoint
+	     exon bins. Identify splice events from the implied splice graph.
+	     Estimate relative usage of splice variants based on compatible
+	     read counts at event boundaries. 
 License: Artistic-2.0
 LazyData: yes
 Depends: GenomicRanges, IRanges, methods
