- SGFeatureCounts and SGVariantCounts classes now extend new   RangedSummarizedExperiment class from SummarizedExperiment package   instead of "old" SummarizedExperiment class from GenomicRanges package. - Update serialized SGFeatureCounts and SGVariantCounts objects included   in the package. - Use mcols() instead of elementMetadata().
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/SGSeq@103679 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,12 +1,13 @@
 ## IMPORT NAMESPACES
 
-import(BiocGenerics)
-import(IRanges)
-import(GenomicAlignments)
-import(GenomicRanges)
 import(methods)
-import(Rsamtools)
+import(BiocGenerics)
 import(S4Vectors)
+import(IRanges)
+import(GenomicRanges)
+import(SummarizedExperiment)
+import(Rsamtools)
+import(GenomicAlignments)
 
 ## IMPORT FUNCTIONS
 
