--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,7 +13,7 @@ LazyData: yes
 Depends: methods, IRanges, GenomicRanges, SummarizedExperiment
 Imports: AnnotationDbi, BiocGenerics, Biostrings, GenomicAlignments,
          GenomicFeatures, GenomeInfoDb, igraph, parallel, Rsamtools,
-         rtracklayer, S4Vectors
+         rtracklayer, S4Vectors, SummarizedExperiment
 Suggests: BiocStyle, knitr, TxDb.Hsapiens.UCSC.hg19.knownGene
 VignetteBuilder: knitr
 biocViews: AlternativeSplicing, RNASeq, Transcription
