--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,8 @@ import(GenomicRanges)
 import(SummarizedExperiment)
 import(Rsamtools)
 import(GenomicAlignments)
+import(SummarizedExperiment)
+import(S4Vectors)
 
 ## IMPORT FUNCTIONS
 
@@ -41,6 +43,7 @@ export(
  makeSGFeatureCounts,
  makeVariantNames,
  mergeTxFeatures,
+ plotCoverage,
  plotFeatures,
  plotSpliceGraph,
  plotVariants,
