--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: SGSeq
 Type: Package
 Title: Splice event detection and quantification from RNA-seq data
-Version: 1.3.7
+Version: 1.3.8
 Author: Leonard Goldstein
 Maintainer: Leonard Goldstein <goldstel@gene.com>
 Description: Predict splice junctions and exons from BAM files and obtain
@@ -13,7 +13,7 @@ LazyData: yes
 Depends: methods, IRanges, GenomicRanges
 Imports: AnnotationDbi, BiocGenerics, Biostrings, GenomicAlignments,
          GenomicFeatures, GenomeInfoDb, igraph, parallel, Rsamtools,
-         rtracklayer, S4Vectors, SummarizedExperiment
+         rtracklayer, S4Vectors, SummarizedExperiment (>= 0.2.0)
 Suggests: BiocStyle, knitr, TxDb.Hsapiens.UCSC.hg19.knownGene
 VignetteBuilder: knitr
 biocViews: AlternativeSplicing, RNASeq, Transcription
