if an event exceeds maxnvariant, skip the affected event and not the complete gene; define open/closed variants rather than events; retain representative features for closed variants that belong to open events
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/SGSeq@105697 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,9 +13,9 @@ import(Rsamtools)
 
 importFrom(AnnotationDbi, select)
 importFrom(Biostrings, DNAString, DNAStringSet, getSeq, translate)
-importFrom(igraph, clusters, degree, edge.connectivity, get.data.frame,
- get.shortest.paths, graph.data.frame, induced.subgraph, neighborhood,
- plot.igraph, shortest.paths, subcomponent)
+importFrom(igraph, clusters, degree, delete.vertices, edge.connectivity,
+ get.data.frame, get.shortest.paths, graph.data.frame, induced.subgraph,
+ neighborhood, plot.igraph, shortest.paths, subcomponent)
 importFrom(GenomicFeatures, exonsBy, mapToTranscripts)
 importFrom(GenomeInfoDb, seqinfo, seqlengths, seqlevels)
 importFrom(parallel, mclapply, mcmapply)
