avoid child processes for cores = 1; countsVariant now includes NAs instead of 0s for variants that cannot be quantified
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/SGSeq@107564 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,7 @@ importFrom(GenomicFeatures, exonsBy, mapToTranscripts)
 importFrom(GenomeInfoDb, seqinfo, seqlengths, seqlevels)
 importFrom(parallel, mclapply, mcmapply)
 importFrom(rtracklayer, export)
+importFrom(RUnit, checkIdentical, checkTrue)
 
 ## IMPORT CLASSES
 
