--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,8 +16,9 @@ importFrom(Biostrings, DNAString, DNAStringSet, getSeq, translate)
 importFrom(igraph, clusters, degree, delete.vertices, edge.connectivity,
  get.data.frame, get.shortest.paths, graph.data.frame, induced.subgraph,
  neighborhood, plot.igraph, shortest.paths, subcomponent)
-importFrom(GenomicFeatures, exonsBy, mapToTranscripts)
-importFrom(GenomeInfoDb, seqinfo, seqlengths, seqlevels)
+importFrom(GenomicFeatures, cdsBy, exonsBy, mapFromTranscripts,
+ mapToTranscripts)
+importFrom(GenomeInfoDb, keepSeqlevels, seqinfo, seqlengths, seqlevels)
 importFrom(parallel, mclapply, mcmapply)
 importFrom(rtracklayer, export)
 importFrom(RUnit, checkIdentical, checkTrue)
@@ -47,6 +48,7 @@ export(
  plotSpliceGraph,
  plotVariants,
  predictTxFeatures,
+ predictVariantConsequences,
  processTerminalExons
 )
 
