changes to predictVariantEffects and related function
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/SGSeq@107786 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -48,7 +48,7 @@ export(
  plotSpliceGraph,
  plotVariants,
  predictTxFeatures,
- predictVariantConsequences,
+ predictVariantEffects,
  processTerminalExons
 )
 
