bug fixes and added function importTranscripts
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/SGSeq@107933 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,7 +20,7 @@ importFrom(GenomicFeatures, cdsBy, exonsBy, mapFromTranscripts,
  mapToTranscripts)
 importFrom(GenomeInfoDb, keepSeqlevels, seqinfo, seqlengths, seqlevels)
 importFrom(parallel, mclapply, mcmapply)
-importFrom(rtracklayer, export)
+importFrom(rtracklayer, export, import)
 importFrom(RUnit, checkIdentical, checkTrue)
 
 ## IMPORT CLASSES
@@ -40,6 +40,7 @@ export(
  getBamInfo,
  getSGFeatureCounts,
  getSGVariantCounts,
+ importTranscripts,
  makeSGFeatureCounts,
  makeVariantNames,
  mergeTxFeatures,
