--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: SGSeq
 Type: Package
-Title: Splice event detection and quantification from RNA-seq data
-Version: 1.3.21
+Title: Splice event prediction and quantification from RNA-seq data
+Version: 1.3.22
 Author: Leonard Goldstein
 Maintainer: Leonard Goldstein <goldstel@gene.com>
 Description: Predict splice junctions and exons from BAM files and obtain
@@ -14,7 +14,7 @@ Depends: methods, IRanges, GenomicRanges
 Imports: AnnotationDbi, BiocGenerics, Biostrings, GenomicAlignments,
          GenomicFeatures, GenomeInfoDb, igraph, parallel, Rsamtools,
          rtracklayer, RUnit, S4Vectors, SummarizedExperiment (>= 0.2.0)
-Suggests: BiocStyle, BSgenome.Hsapiens.UCSC.hg19, knitr, 
+Suggests: BiocStyle, BSgenome.Hsapiens.UCSC.hg19, knitr, rmarkdown,
 	  TxDb.Hsapiens.UCSC.hg19.knownGene
 VignetteBuilder: knitr
 biocViews: AlternativeSplicing, RNASeq, Transcription
