Refactoring and API changes
  - Added new columns in SGVariants class:
    closed5pEvent, closed3pEvent, featureID5pEvent, featureID3pEvent
  - Renamed SGVariantCounts assays for consistency with SGVariants columns:
    counts5pVariant -> counts5p
    counts3pVariant -> counts3p
    countsTotal5p —> counts5pEvent
    countsTotal3p —> counts3pEvent
    countsVariant -> counts
    countsTotal -> deprecated 
  - min_denominator filter now applies to denominator at event boundaries
  - Changed behavior of annotate function (when assigning gene names to
    unannotated features, only closest connected annotated features are
    considered)
  - Introduced min_anchor argument
  - Deprecated features argument for getSGVariantCountsFromBamFiles
  - Exclude read pairs with inconsistent alignments (intron-exon overlaps)




git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/SGSeq@110672 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,20 +1,39 @@
 Package: SGSeq
 Type: Package
 Title: Splice event prediction and quantification from RNA-seq data
-Version: 1.5.0
+Version: 1.5.1
 Author: Leonard Goldstein
 Maintainer: Leonard Goldstein <goldstel@gene.com>
 Description: Predict splice junctions and exons from BAM files and obtain
-	     compatible read counts and FPKMs. Identify splice events and
-	     estimate relative usage of splice variants based on compatible
-	     read counts at event boundaries. 
+    compatible read counts and FPKMs. Identify splice events and
+    estimate relative usage of splice variants based on compatible
+    read counts at event boundaries.
 License: Artistic-2.0
 LazyData: yes
-Depends: methods, IRanges, GenomicRanges
-Imports: AnnotationDbi, BiocGenerics, Biostrings, GenomicAlignments,
-         GenomicFeatures, GenomeInfoDb, igraph, parallel, Rsamtools,
-         rtracklayer, RUnit, S4Vectors, SummarizedExperiment (>= 0.2.0)
-Suggests: BiocStyle, BSgenome.Hsapiens.UCSC.hg19, knitr, rmarkdown,
-	  TxDb.Hsapiens.UCSC.hg19.knownGene
+Depends:
+    methods,
+    IRanges,
+    GenomicRanges
+Imports:
+    AnnotationDbi,
+    BiocGenerics,
+    Biostrings,
+    GenomicAlignments,
+    GenomicFeatures,
+    GenomeInfoDb,
+    igraph,
+    parallel,
+    Rsamtools,
+    rtracklayer,
+    RUnit,
+    S4Vectors,
+    SummarizedExperiment (>= 0.2.0)
+Suggests:
+    BiocStyle,
+    BSgenome.Hsapiens.UCSC.hg19,
+    knitr,
+    rmarkdown,
+    TxDb.Hsapiens.UCSC.hg19.knownGene
 VignetteBuilder: knitr
 biocViews: AlternativeSplicing, RNASeq, Transcription
+RoxygenNote: 5.0.1
