--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,11 +13,12 @@ import(Rsamtools)
 
 importFrom(AnnotationDbi, select)
 importFrom(Biostrings, DNAString, DNAStringSet, getSeq, translate)
-importFrom(igraph, clusters, degree, delete.vertices, edge.connectivity,
- get.data.frame, get.shortest.paths, graph.data.frame, induced.subgraph,
- neighborhood, plot.igraph, shortest.paths, subcomponent)
+importFrom(igraph, clusters, degree, delete.edges, delete.vertices,
+    edge.connectivity, get.data.frame, get.shortest.paths,
+    graph.data.frame, induced.subgraph, neighborhood, plot.igraph,
+    shortest.paths, subcomponent)
 importFrom(GenomicFeatures, cdsBy, exonsBy, mapFromTranscripts,
- mapToTranscripts)
+    mapToTranscripts)
 importFrom(GenomeInfoDb, keepSeqlevels, seqinfo, seqlengths, seqlevels)
 importFrom(parallel, mclapply, mcmapply)
 importFrom(rtracklayer, export, import)
@@ -30,97 +31,101 @@ importClassesFrom(rtracklayer, GenomicRangesORGenomicRangesList)
 ## EXPORT FUNCTIONS
 
 export(
- analyzeFeatures,
- analyzeVariants,
- annotate,
- convertToSGFeatures,
- convertToTxFeatures,
- exportFeatures,
- findSGVariants,
- getBamInfo,
- getSGFeatureCounts,
- getSGVariantCounts,
- importTranscripts,
- makeSGFeatureCounts,
- makeVariantNames,
- mergeTxFeatures,
- plotCoverage,
- plotFeatures,
- plotSpliceGraph,
- plotVariants,
- predictTxFeatures,
- predictVariantEffects,
- processTerminalExons
+    analyzeFeatures,
+    analyzeVariants,
+    annotate,
+    convertToSGFeatures,
+    convertToTxFeatures,
+    exportFeatures,
+    findSGVariants,
+    getBamInfo,
+    getSGFeatureCounts,
+    getSGVariantCounts,
+    importTranscripts,
+    makeSGFeatureCounts,
+    makeVariantNames,
+    mergeTxFeatures,
+    plotCoverage,
+    plotFeatures,
+    plotSpliceGraph,
+    plotVariants,
+    predictTxFeatures,
+    predictVariantEffects,
+    processTerminalExons
 )
 
 ## EXPORT CONSTRUCTORS
 
 export(
- TxFeatures,
- SGFeatures,
- SGVariants,
- SGFeatureCounts,
- SGVariantCounts
+    TxFeatures,
+    SGFeatures,
+    SGVariants,
+    SGFeatureCounts,
+    SGVariantCounts
 )
 
 ## EXPORT ACCESSORS
 
 exportMethods(
- type,
- txName,
- geneName,
- splice5p,
- splice3p,
- featureID,
- geneID,
- from,
- to,
- segmentID,
- eventID,
- variantID,
- closed5p,
- closed3p,
- variantType,
- variantName,
- featureID5p,
- featureID3p,
- counts,
- FPKM,
- countsVariant5p,
- countsTotal5p,
- countsVariant3p,
- countsTotal3p,
- countsVariant,
- countsTotal,
- variantFreq
+    type,
+    txName,
+    geneName,
+    splice5p,
+    splice3p,
+    featureID,
+    geneID,
+    from,
+    to,
+    segmentID,
+    eventID,
+    variantID,
+    closed5p,
+    closed3p,
+    closed5pEvent,
+    closed3pEvent,
+    variantType,
+    variantName,
+    featureID5p,
+    featureID3p,
+    featureID5pEvent,
+    featureID3pEvent,
+    counts,
+    FPKM,
+    counts5p,
+    counts3p,
+    counts5pEvent,
+    counts3pEvent,
+    variantFreq
 )
 
 exportMethods(
- 'type<-',
- 'txName<-',
- 'geneName<-',
- 'splice5p<-',
- 'splice3p<-',
- 'featureID<-',
- 'geneID<-',
- 'from<-',
- 'to<-',
- 'segmentID<-',
- 'eventID<-',
- 'variantID<-',
- 'closed5p<-',
- 'closed3p<-',
- 'variantType<-',
- 'variantName<-',
- 'featureID5p<-',
- 'featureID3p<-',
- 'counts<-',
- 'FPKM<-',
- 'countsVariant5p<-',
- 'countsTotal5p<-',
- 'countsVariant3p<-',
- 'countsTotal3p<-',
- 'countsVariant<-',
- 'countsTotal<-',
- 'variantFreq<-'
+    'type<-',
+    'txName<-',
+    'geneName<-',
+    'splice5p<-',
+    'splice3p<-',
+    'featureID<-',
+    'geneID<-',
+    'from<-',
+    'to<-',
+    'segmentID<-',
+    'eventID<-',
+    'variantID<-',
+    'closed5p<-',
+    'closed3p<-',
+    'closed5pEvent<-',
+    'closed3pEvent<-',
+    'variantType<-',
+    'variantName<-',
+    'featureID5p<-',
+    'featureID3p<-',
+    'featureID5pEvent<-',
+    'featureID3pEvent<-',
+    'counts<-',
+    'FPKM<-',
+    'counts5p<-',
+    'counts3p<-',
+    'counts5pEvent<-',
+    'counts3pEvent<-',
+    'variantFreq<-'
 )
