Changes in SGSeq version 1.5.7
  - fixed bug in plotSpliceGraph() - track scores were displayed incorrectly
    for graphs with dummy nodes
  - avoid unnecessary warnings in plotVariants() for expand_variants = TRUE
  - in vignette added examples on how to extract counts/FPKMs from
    SGFeatureCounts and variant frequencies from SGVariantCounts
  - changes in predictVariantEffects()
  - coverages stored as RleList instead of IntegerList
  - fixed errors due to Bioc changes in togroup()
  - fixed errors due to Bioc changes in Hits class
  - fixed NAMESPACE issues due to Bioc introducing generic functions
    from(), to() in S4Vectors package


git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/SGSeq@113954 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,7 +12,7 @@ import(Rsamtools)
 ## IMPORT FUNCTIONS
 
 importFrom(AnnotationDbi, select)
-importFrom(Biostrings, DNAString, DNAStringSet, getSeq, translate)
+importFrom(Biostrings, DNAString, DNAStringSet, getSeq, translate, type)
 importFrom(igraph, clusters, degree, delete.edges, delete.vertices,
     edge.connectivity, get.data.frame, get.shortest.paths,
     graph.data.frame, induced.subgraph, neighborhood, plot.igraph,
