Changes in SGSeq 1.5.16
- updated vignette
- adjacent exons no longer cause warnings in convertToTxFeatures()
- min_junction_count as argument in analyzeFeatures()
- plotSpliceGraph() output now longer includes unnecessary color column
- plotCoverage() uses polygons instead of rectangles
- fixed NULL labels in plotVariants()
- fixed issues with counts/FPKM methods for SGVariantCounts



git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/SGSeq@116753 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: SGSeq
 Type: Package
 Title: Splice event prediction and quantification from RNA-seq data
-Version: 1.5.15
+Version: 1.5.16
 Author: Leonard Goldstein
 Maintainer: Leonard Goldstein <goldstel@gene.com>
 Description: Predict splice junctions and exons from BAM files and obtain
@@ -11,11 +11,11 @@ Description: Predict splice junctions and exons from BAM files and obtain
 License: Artistic-2.0
 LazyData: yes
 Depends:
-    methods,
     IRanges,
     GenomicRanges (>= 1.23.21),
     Rsamtools,
-    SummarizedExperiment
+    SummarizedExperiment,
+    methods
 Imports:
     AnnotationDbi,
     BiocGenerics,
@@ -23,17 +23,20 @@ Imports:
     GenomicAlignments,
     GenomicFeatures,
     GenomeInfoDb,
+    RUnit,
+    S4Vectors (>= 0.9.39),
+    grDevices,
+    graphics,
     igraph,
     parallel,
     rtracklayer,
-    RUnit,
-    S4Vectors (>= 0.9.39)
+    stats
 Suggests:
     BiocStyle,
     BSgenome.Hsapiens.UCSC.hg19,
+    TxDb.Hsapiens.UCSC.hg19.knownGene,
     knitr,
-    rmarkdown,
-    TxDb.Hsapiens.UCSC.hg19.knownGene
+    rmarkdown
 VignetteBuilder: knitr
 biocViews: AlternativeSplicing, RNASeq, Transcription
 RoxygenNote: 5.0.1
