added updateObject methods for SGVariants and SGVariantCounts
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/SGSeq@116947 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -57,6 +57,11 @@ export(
     processTerminalExons
 )
 
+## EXPORT METHODS
+
+exportMethods(
+    updateObject)
+
 ## EXPORT CONSTRUCTORS
 
 export(
