--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: SGSeq
 Type: Package
 Title: Splice event prediction and quantification from RNA-seq data
-Version: 1.5.19
+Version: 1.5.20
 Author: Leonard Goldstein
 Maintainer: Leonard Goldstein <goldstel@gene.com>
-Description: *SGSeq* is a software package for analyzing splice events from
+Description: SGSeq is a software package for analyzing splice events from
 	     RNA-seq data. Input data are sequence reads mapped to a reference
 	     genome in BAM format. Genes are represented as a genome-wide
 	     splice graph, which can be obtained from existing annotation or
