--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: SGSeq
 Type: Package
 Title: Splice event prediction and quantification from RNA-seq data
-Version: 1.11.0
+Version: 1.11.1
 Author: Leonard Goldstein
 Maintainer: Leonard Goldstein <goldstel@gene.com>
 Description: SGSeq is a software package for analyzing splice events from 
@@ -34,7 +34,7 @@ Imports:
     graphics,
     igraph,
     parallel,
-    rtracklayer,
+    rtracklayer (>= 1.37.2),
     stats
 Suggests:
     BiocStyle,
