--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: SGSeq
 Type: Package
 Title: Splice event prediction and quantification from RNA-seq data
-Version: 1.13.0
+Version: 1.13.1
 Author: Leonard Goldstein
 Maintainer: Leonard Goldstein <goldstel@gene.com>
 Description: SGSeq is a software package for analyzing splice events from 
@@ -16,25 +16,25 @@ Description: SGSeq is a software package for analyzing splice events from
 License: Artistic-2.0
 LazyData: yes
 Depends:
-    IRanges,
-    GenomicRanges (>= 1.23.21),
-    Rsamtools,
+    IRanges (>= 2.13.12),
+    GenomicRanges (>= 1.31.8),
+    Rsamtools (>= 1.31.2),
     SummarizedExperiment,
     methods
 Imports:
     AnnotationDbi,
     BiocGenerics,
-    Biostrings,
-    GenomicAlignments,
-    GenomicFeatures,
+    Biostrings (2.47.6),
+    GenomicAlignments (>= 1.15.6),
+    GenomicFeatures (>= 1.31.3),
     GenomeInfoDb,
     RUnit,
-    S4Vectors (>= 0.9.39),
+    S4Vectors (>= 0.17.25),
     grDevices,
     graphics,
     igraph,
     parallel,
-    rtracklayer (>= 1.37.2),
+    rtracklayer (>= 1.39.7),
     stats
 Suggests:
     BiocStyle,
