--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,7 +18,8 @@ importFrom(GenomicFeatures, cdsBy, exonsBy, mapFromTranscripts,
 importFrom(GenomeInfoDb, keepSeqlevels, seqinfo, seqlengths, seqlevels)
 importFrom(RUnit, checkIdentical, checkTrue)
 importFrom(grDevices, col2rgb, colorRampPalette, dev.size, rgb)
-importFrom(graphics, axis, layout, mtext, par, plot, polygon, rect, text)
+importFrom(graphics, axis, frame, layout, mtext, par, plot, polygon, rect,
+    text)
 importFrom(igraph, clusters, degree, delete.edges, delete.vertices,
     edge.connectivity, get.data.frame, get.shortest.paths,
     graph.data.frame, induced.subgraph, neighborhood, plot.igraph,
