--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: SGSeq
 Type: Package
 Title: Splice event prediction and quantification from RNA-seq data
-Version: 1.17.0
+Version: 1.17.1
 Author: Leonard Goldstein
 Maintainer: Leonard Goldstein <goldstel@gene.com>
 Description: SGSeq is a software package for analyzing splice events from 
@@ -43,5 +43,5 @@ Suggests:
     knitr,
     rmarkdown
 VignetteBuilder: knitr
-biocViews: AlternativeSplicing, RNASeq, Transcription
+biocViews: AlternativeSplicing, ImmunoOncology, RNASeq, Transcription
 RoxygenNote: 6.0.1
