--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: SGSeq
 Type: Package
 Title: Splice event prediction and quantification from RNA-seq data
-Version: 1.23.1
-Authors@R: person("Leonard", "Goldstein", email = "goldstel@gene.com", role = c("cre", "aut"))
+Version: 1.23.2
+Authors@R: person("Leonard", "Goldstein", email = "ldgoldstein@gmail.com", role = c("cre", "aut"))
 Description: SGSeq is a software package for analyzing splice events from 
 	     RNA-seq data. Input data are RNA-seq reads mapped to a reference
 	     genome in BAM format. Genes are represented as a splice graph, 
